.gitignore and first toric variety example

--- a/initial.ipynb
+++ b/initial.ipynb
@@ -145,7 +145,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Toric varieties in polymake"
+    "# Toric varieties in polymake\n",
+    "For some reason, polymake.jl needs the cone indices counted from 0 (instead of julia convention counting from 1). I will investigate this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0; 0 -1; -2 1]; INPUT_CONES=[[0,1],[1,2],[2,3],[0,3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tv.SMOOTH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tv.COMPLETE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tv.REGULAR)"
    ]
   },
   {
