How to use convex_hull from Oscar.jl

--- a/initial.ipynb
+++ b/initial.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import Pkg\n",
-    "Pkg.add(\"Polymake\")"
+    "Pkg.add(\"Polymake\")\n",
+    "Pkg.add(\"Oscar\")"
    ]
   },
   {
@@ -16,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Polymake"
+    "using Polymake\n",
+    "using Oscar"
    ]
   },
   {
@@ -32,6 +34,38 @@
    "metadata": {},
    "source": [
     "## Cones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In Oscar.jl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pts = [0 0; 1 0; 0 1; 1 1]\n",
+    "ray = [1 1]\n",
+    "square = convex_hull(pts)\n",
+    "square_with_tail = convex_hull(pts, ray)\n",
+    "rc = recession_cone(square_with_tail)\n",
+    "println(\"#vertices of square: \",n_vertices(square))\n",
+    "println(\"Vertices of square: \",vertices(square; as = :point_matrix))\n",
+    "println(\"#vertices of square with recession cone: \",n_vertices(square_with_tail))\n",
+    "println(\"Vertices of square with recession cone: \",vertices(square_with_tail; as = :point_matrix))\n",
+    "println(\"Rays of square with rc: \",rays(square_with_tail; as = :point_matrix))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In polymake.jl"
    ]
   },
   {
