--- a/initial.ipynb
+++ b/initial.ipynb
@@ -50,12 +50,21 @@
    "outputs": [],
    "source": [
     "pts = [0 0; 1 0; 0 1; 1 1]\n",
-    "ray = [1 1]\n",
+    "\n",
     "square = convex_hull(pts)\n",
+    "println(\"#vertices of square: \",n_vertices(square))\n",
+    "println(\"Vertices of square: \",vertices(square; as = :point_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray = [1 1]\n",
     "square_with_tail = convex_hull(pts, ray)\n",
     "rc = recession_cone(square_with_tail)\n",
-    "println(\"#vertices of square: \",n_vertices(square))\n",
-    "println(\"Vertices of square: \",vertices(square; as = :point_matrix))\n",
     "println(\"#vertices of square with recession cone: \",n_vertices(square_with_tail))\n",
     "println(\"Vertices of square with recession cone: \",vertices(square_with_tail; as = :point_matrix))\n",
     "println(\"Rays of square with rc: \",rays(square_with_tail; as = :point_matrix))"
