updated henry code

--- a/henry_code.ipynb
+++ b/henry_code.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "prepared-bleeding",
+   "id": "anticipated-three",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "middle-lodging",
+   "id": "bridal-cooking",
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "closing-revolution",
+   "execution_count": 43,
+   "id": "authorized-immigration",
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +90,7 @@
       "{2 3}\n",
       "{0 3}\n",
       "\n",
+      "Bool[1, 1, 0, 0]\n",
       "CxxWrap.CxxWrapCore.CxxBool[true true false false; false true true false; false false true true; true false false true]\n"
      ]
     }
@@ -97,13 +98,14 @@
    "source": [
     "l = tv.MAXIMAL_CONES\n",
     "println(l)\n",
+    "println(l[1,:])\n",
     "println(Array(l))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "manual-brain",
+   "id": "specific-plymouth",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "convinced-proposition",
+   "id": "about-manufacturer",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "straight-consciousness",
+   "id": "cognitive-bulgaria",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "foreign-bosnia",
+   "id": "roman-logistics",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dressed-firmware",
+   "id": "occasional-andrews",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ranging-mission",
+   "id": "explicit-recovery",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "accredited-tomorrow",
+   "id": "cathedral-bangladesh",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "oriental-mitchell",
+   "id": "friendly-composition",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hawaiian-yacht",
+   "id": "stupid-remedy",
    "metadata": {},
    "outputs": [],
    "source": []
