--- a/henry_code.ipynb
+++ b/henry_code.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "prepared-bleeding",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "middle-lodging",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +63,7 @@
        "\t-2 1\n"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,8 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "closing-revolution",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "manual-brain",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +108,7 @@
        "slicematrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,8 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "convinced-proposition",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +130,7 @@
        "rowMinors (generic function with 1 method)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "straight-consciousness",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "coneListFormat (generic function with 2 methods)"
+       "coneListFormat (generic function with 1 method)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,8 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "foreign-bosnia",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "dressed-firmware",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +213,7 @@
        "-1 1/2\n"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,8 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ranging-mission",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +236,7 @@
        "4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,8 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "accredited-tomorrow",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +256,7 @@
        "makeSmooth (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,29 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "oriental-mitchell",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "\u001b[91mno matching overloaded instance of Polymake::common::dense(Integer) at -e line 0.\u001b[39m\n\u001b[91m\teval {...} called at -e line 0\u001b[39m\n",
+     "evalue": "\u001b[91mMethodError: no method matching coneListFormat(::Bool)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  coneListFormat(::Any, \u001b[91m::Any\u001b[39m) at In[11]:1\u001b[39m",
      "output_type": "error",
      "traceback": [
-      "\u001b[91mno matching overloaded instance of Polymake::common::dense(Integer) at -e line 0.\u001b[39m\n\u001b[91m\teval {...} called at -e line 0\u001b[39m\n",
+      "\u001b[91mMethodError: no method matching coneListFormat(::Bool)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  coneListFormat(::Any, \u001b[91m::Any\u001b[39m) at In[11]:1\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] internal_call_function(::String, ::CxxWrap.StdLib.StdVectorAllocated{CxxWrap.StdLib.StdString}, ::Array{Any,1}) at /home/dhruvbhatia00/.julia/packages/CxxWrap/OcN1Z/src/CxxWrap.jl:618",
-      " [2] #22 at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/call_function.jl:20 [inlined]",
-      " [3] disable_sigint at ./c.jl:446 [inlined]",
-      " [4] call_function(::Type{Polymake.PropertyValue}, ::Symbol, ::Symbol, ::Bool; template_parameters::Array{String,1}, kwargs::Base.Iterators.Pairs{Union{},Union{},Tuple{},NamedTuple{(),Tuple{}}}) at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/call_function.jl:19",
-      " [5] #call_function#24 at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/call_function.jl:27 [inlined]",
-      " [6] dense at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/meta.jl:291 [inlined]",
-      " [7] dense at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/meta.jl:291 [inlined]",
-      " [8] coneListFormat(::Bool) at ./In[18]:3",
-      " [9] makeSmooth(::Polymake.BigObjectAllocated) at ./In[24]:8",
-      " [10] top-level scope at In[25]:1",
-      " [11] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+      " [1] makeSmooth(::Polymake.BigObjectAllocated) at ./In[15]:8",
+      " [2] top-level scope at In[16]:1",
+      " [3] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
      ]
     }
    ],
@@ -343,7 +324,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hawaiian-yacht",
    "metadata": {},
    "outputs": [],
    "source": []
