--- a/new_henry_code.ipynb
+++ b/new_henry_code.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compliant-peninsula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chinese-victory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-element",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informative-eclipse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alert-emergency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integrated-fleece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noted-quick",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,11 +162,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Julia 1.5.3",
+   "language": "julia",
+   "name": "julia-1.5"
   },
   "language_info": {
-   "name": ""
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.5.3"
   }
  },
  "nbformat": 4,
