some progress on makesimplicial, need orbits

--- a/makeSimplicialDraft.ipynb
+++ b/makeSimplicialDraft.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "designed-whole",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "blank-programming",
    "metadata": {
     "scrolled": true
    },
@@ -61,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "right-conjunction",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "perfect-stupid",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "sacred-album",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "digital-roberts",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +171,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "medical-leone",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "overall-peoples",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "incorporate-railway",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "specific-alcohol",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "crude-westminster",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "stupid-connectivity",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "dutch-irrigation",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "straight-atlantic",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +367,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "prompt-companion",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +387,6 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "several-haven",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "polyphonic-entrance",
    "metadata": {},
    "outputs": [
     {
@@ -448,10 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "democratic-softball",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "makeSimplicial (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function makeSimplicial(X)\n",
     "    Y = copy(X)\n",
@@ -474,25 +467,35 @@
     "            # Use some function to get dimension of the fan\n",
     "            # Calculate codimension of cone\n",
     "            c = 1 + getDimension(Y) - rank(Matrix(rayMatrix))\n",
-    "            i = 0\n",
     "            # Find the first ray that is contained in more than one orbit\n",
     "            # and subdivide at that ray, using toricBlowup\n",
     "            \n",
     "            # Macaulay2 code\n",
     "            #edges := select (orbits (Y,c), r -> all(r, j -> member (j,s)));\n",
     "            #find the orbits of Y of dimension c that are contained in s\n",
-    "            #while select (edges, r -> not member (s#i,r)) === 1 do i = i+1;\n",
+    "            #while #select (edges, r -> not member (s#i,r)) === 1 do i = i+1;\n",
+    "            i = 1\n",
+    "            while count(r->(badCone[i] in r), edges) == 1\n",
+    "                i += 1\n",
+    "            end\n",
+    "            \n",
+    "            Y = toricBlowup(badCone[i], Y)\n",
     "            #find the first ray that is contained in more than one orbit\n",
     "            #Y = toricBlowup({s#i},Y) )\n",
     "            #subdivide at that ray\n",
     "        end\n",
-    "        # findfirst does not seem to work with the MAXIMAL_CONES array\n",
-    "        #k = findfirst(cone -> (getConeRank(cone, tv.RAYS) != size(cone)), eachrow(coneList))\n",
     "    end\n",
     "    return Y\n",
     "end\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
