--- a/new_henry_code.ipynb
+++ b/new_henry_code.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compliant-peninsula",
+   "id": "powerful-causing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chinese-victory",
+   "id": "invalid-happiness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-element",
+   "id": "filled-blues",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informative-eclipse",
+   "id": "minimal-translation",
    "metadata": {},
    "outputs": [],
    "source": [
+    "function convertIncidenceMatrix(A)\n",
     "    A=Array(A)\n",
     "    dim1=size(A,1)\n",
     "    dim2=size(A,2)\n",
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alert-emergency",
+   "id": "least-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integrated-fleece",
+   "id": "opponent-illinois",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noted-quick",
+   "id": "abstract-catch",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,11 +170,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Julia 1.5.3",
+   "language": "julia",
+   "name": "julia-1.5"
   },
   "language_info": {
-   "name": ""
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.5.3"
   }
  },
  "nbformat": 4,
