Bug fixing for Toric Blowup

--- a/initial.ipynb
+++ b/initial.ipynb
@@ -194,9 +194,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: fulton not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: fulton not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[1]:1",
+      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
    "source": [
     "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0; 0 -1; -2 1]; INPUT_CONES=[[0,1],[1,2],[2,3],[0,3]])"
    ]
