--- a/toric_blowup.ipynb
+++ b/toric_blowup.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "specific-colon",
+   "execution_count": 8,
+   "id": "governmental-identifier",
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "universal-increase",
+   "execution_count": 3,
+   "id": "least-solid",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "slicematrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "static-second",
+   "execution_count": 4,
+   "id": "selective-nevada",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "rowMinors (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "returning-insulation",
+   "execution_count": 119,
+   "id": "dominican-notification",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "convertIncidenceMatrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,15 +116,15 @@
     "        end\n",
     "        append!(out,[members])\n",
     "    end\n",
-    "    return out\n",
+    "    return convert.(Array{Int64, 1}, out)\n",
     "end\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "monetary-beach",
+   "execution_count": 116,
+   "id": "national-gilbert",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "coneListFormat (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "integrated-cattle",
+   "execution_count": 222,
+   "id": "restricted-designer",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "toric_blowup (generic function with 1 method)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,10 +183,11 @@
     "    #d = size(rayMatrix, 1) #length of array describing each ray\n",
     "    clStar = []\n",
     "    for t in star\n",
-    "        c = rank(rowMinors(rayMatrix, t)) - 1\n",
+    "        c = rank(Array(rowMinors(rayMatrix, t))) - 1\n",
     "        for i in t\n",
-    "            subcone = filter(elt -> elt != i, t)\n",
-    "            if rank(rowMinors(rayMatrix, subcone)) == c\n",
+    "            subcone = convert.(Int64, filter(elt -> elt != i, t))\n",
+    "            #println(subcone)\n",
+    "            if rank(Array(rowMinors(rayMatrix, subcone))) == c\n",
     "                append!(clStar, [subcone])\n",
     "            end\n",
     "        end\n",
@@ -197,13 +198,16 @@
     "    #coneList = filter(t -> !(t in star), coneList)\n",
     "    coneList  = rowMinors(coneList, filter(i -> !(i in starIndex), range(1, stop=size(coneList, 1))))\n",
     "    \n",
-    "    if size(s,1) == 1\n",
+    "    if size(s,2) == 1\n",
     "        newCones = []\n",
     "        for t in clStar\n",
-    "            if !(s[0] in t)\n",
-    "                append!(newCones, [sort(append!(t, s))])\n",
+    "            if !(s[1] in t)\n",
+    "                append!(newCones, [sort(hcat(t..., s...), dims=2)])\n",
     "            end\n",
     "        end\n",
+    "        newCones = convert.(Array{Int64,2}, newCones)\n",
+    "        println(newCones)\n",
+    "        println(convert.(Array{Int64,1}, coneList))\n",
     "        return fulton.NormalToricVariety(INPUT_RAYS = Array(X.RAYS), INPUT_CONES = append!(coneList, newCones))\n",
     "    end\n",
     "    newCones = []\n",
@@ -219,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smaller-dominant",
+   "id": "bulgarian-means",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,32 +234,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "fitting-parts",
+   "execution_count": 14,
+   "id": "checked-malawi",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching rank(::Array{Array{Int64,2},1})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  rank(\u001b[91m::Hecke.ModuleCtxNmod\u001b[39m) at /home/dhruvbhatia00/.julia/packages/Hecke/iivXP/src/Sparse/Module.jl:186\u001b[39m\n\u001b[91m\u001b[0m  rank(\u001b[91m::Hecke.ModuleCtx_fmpz\u001b[39m) at /home/dhruvbhatia00/.julia/packages/Hecke/iivXP/src/Sparse/Module.jl:182\u001b[39m\n\u001b[91m\u001b[0m  rank(\u001b[91m::GrpAbFinGen\u001b[39m) at /home/dhruvbhatia00/.julia/packages/Hecke/iivXP/src/GrpAb/GrpAbFinGen.jl:459\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching rank(::Array{Array{Int64,2},1})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  rank(\u001b[91m::Hecke.ModuleCtxNmod\u001b[39m) at /home/dhruvbhatia00/.julia/packages/Hecke/iivXP/src/Sparse/Module.jl:186\u001b[39m\n\u001b[91m\u001b[0m  rank(\u001b[91m::Hecke.ModuleCtx_fmpz\u001b[39m) at /home/dhruvbhatia00/.julia/packages/Hecke/iivXP/src/Sparse/Module.jl:182\u001b[39m\n\u001b[91m\u001b[0m  rank(\u001b[91m::GrpAbFinGen\u001b[39m) at /home/dhruvbhatia00/.julia/packages/Hecke/iivXP/src/GrpAb/GrpAbFinGen.jl:459\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[33]:2",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/html": [
+       "$2$"
+      ],
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = [[1 0], [0 1]]\n",
+    "a = Array([1 0; 0 1])\n",
     "rank(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "italic-matter",
+   "execution_count": 11,
+   "id": "cubic-aluminum",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +291,7 @@
        "\t-2 1\n"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,107 +302,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "wanted-companion",
+   "execution_count": 223,
+   "id": "absent-puppy",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2], [1 4]]\n"
+     ]
+    },
+    {
      "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching svdvals!(::Polymake.MatrixAllocated{Float64})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  svdvals!(\u001b[91m::LinearAlgebra.SymTridiagonal\u001b[39m) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/tridiag.jl:350\u001b[39m\n\u001b[91m\u001b[0m  svdvals!(\u001b[91m::StridedArray{T, 2}\u001b[39m) where T<:Union{Complex{Float32}, Complex{Float64}, Float32, Float64} at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/svd.jl:193\u001b[39m\n\u001b[91m\u001b[0m  svdvals!(\u001b[91m::StridedArray{T, 2}\u001b[39m, \u001b[91m::StridedArray{T, 2}\u001b[39m) where T<:Union{Complex{Float32}, Complex{Float64}, Float32, Float64} at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/svd.jl:501\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
+     "evalue": "\u001b[91mMethodError: no method matching Array{Int64,1}(::LinearAlgebra.Transpose{Int64,Array{Int64,1}})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(::AbstractArray{S,N}) where {T, N, S} at array.jl:562\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}() where T at boot.jl:425\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(\u001b[91m::UndefInitializer\u001b[39m, \u001b[91m::Int64\u001b[39m) where T at boot.jl:406\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
      "output_type": "error",
      "traceback": [
-      "\u001b[91mMethodError: no method matching svdvals!(::Polymake.MatrixAllocated{Float64})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  svdvals!(\u001b[91m::LinearAlgebra.SymTridiagonal\u001b[39m) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/tridiag.jl:350\u001b[39m\n\u001b[91m\u001b[0m  svdvals!(\u001b[91m::StridedArray{T, 2}\u001b[39m) where T<:Union{Complex{Float32}, Complex{Float64}, Float32, Float64} at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/svd.jl:193\u001b[39m\n\u001b[91m\u001b[0m  svdvals!(\u001b[91m::StridedArray{T, 2}\u001b[39m, \u001b[91m::StridedArray{T, 2}\u001b[39m) where T<:Union{Complex{Float32}, Complex{Float64}, Float32, Float64} at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/svd.jl:501\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
+      "\u001b[91mMethodError: no method matching Array{Int64,1}(::LinearAlgebra.Transpose{Int64,Array{Int64,1}})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(::AbstractArray{S,N}) where {T, N, S} at array.jl:562\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}() where T at boot.jl:425\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(\u001b[91m::UndefInitializer\u001b[39m, \u001b[91m::Int64\u001b[39m) where T at boot.jl:406\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] svdvals(::LinearAlgebra.Transpose{Polymake.Rational,Polymake.MatrixAllocated{Polymake.Rational}}) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/svd.jl:218",
-      " [2] #rank#15 at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/generic.jl:985 [inlined]",
-      " [3] rank(::LinearAlgebra.Transpose{Polymake.Rational,Polymake.MatrixAllocated{Polymake.Rational}}) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/generic.jl:984",
-      " [4] toric_blowup(::Array{Int64,2}, ::Polymake.BigObjectAllocated, ::Array{Int64,2}) at ./In[86]:10",
-      " [5] top-level scope at In[87]:1",
-      " [6] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+      " [1] convert(::Type{Array{Int64,1}}, ::LinearAlgebra.Transpose{Int64,Array{Int64,1}}) at ./array.jl:554",
+      " [2] _broadcast_getindex_evalf at ./broadcast.jl:648 [inlined]",
+      " [3] _broadcast_getindex at ./broadcast.jl:631 [inlined]",
+      " [4] getindex at ./broadcast.jl:575 [inlined]",
+      " [5] copy at ./broadcast.jl:876 [inlined]",
+      " [6] materialize(::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2},Nothing,typeof(convert),Tuple{Base.RefValue{Type{Array{Int64,1}}},LinearAlgebra.Transpose{LinearAlgebra.Transpose{Int64,Array{Int64,1}},Array{Array{Int64,1},2}}}}) at ./broadcast.jl:837",
+      " [7] toric_blowup(::Array{Int64,1}, ::Polymake.BigObjectAllocated, ::Array{Int64,2}) at ./In[222]:34",
+      " [8] top-level scope at In[223]:1",
+      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
      ]
     }
    ],
    "source": [
-    "toric_blowup([1 2], tv, [1 1])"
+    "toric_blowup([1], tv, [1 -1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "charming-general",
+   "execution_count": 23,
+   "id": "caroline-newfoundland",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$1$"
+      ],
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank(Polymake.Rational[0 1; 1 0]) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "recorded-elements",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1×0 LinearAlgebra.Transpose{Any,Array{Any,1}}\n",
+      "1×0 LinearAlgebra.Transpose{Any,Array{Any,1}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "pm::Matrix<pm::Rational>\n",
+       "0 1\n",
+       "1 0\n",
+       "0 -1\n",
+       "-1 1/2\n"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coneList = convertIncidenceMatrix(tv.MAXIMAL_CONES)\n",
+    "starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
+    "star = rowMinors(coneList, starIndex)\n",
+    "println(star)\n",
+    "coneList = convert.(Array{Int64, 1}, coneList)\n",
+    "starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
+    "star = rowMinors(coneList, starIndex)\n",
+    "println(star)\n",
+    "rayMatrix = tv.RAYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "widespread-asbestos",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$4$"
+      ],
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = [0 1 2 3]\n",
+    "size(s, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "operational-furniture",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mMethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mArray{Int64,2}\u001b[39m\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractArray\u001b[39m) where T<:Array at array.jl:554\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractArray at abstractarray.jl:14\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::LinearAlgebra.Factorization\u001b[39m) where T<:AbstractArray at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/factorization.jl:55\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mMethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mArray{Int64,2}\u001b[39m\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractArray\u001b[39m) where T<:Array at array.jl:554\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractArray at abstractarray.jl:14\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::LinearAlgebra.Factorization\u001b[39m) where T<:AbstractArray at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/factorization.jl:55\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] setindex! at ./array.jl:849 [inlined]",
+      " [2] hvcat_fill(::Array{Array{Int64,2},2}, ::Tuple{Int64,Int64,Int64}) at ./abstractarray.jl:1797",
+      " [3] typed_hcat(::Type{Array{Int64,2}}, ::Int64, ::Int64, ::Int64) at ./abstractarray.jl:1365",
+      " [4] top-level scope at In[99]:1",
+      " [5] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
+   "source": [
+    "a = Array{Int64, 2}[5 4 3]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "enhanced-default",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2-element Array{Array{Int64,2},1}:\n",
+       "4-element Array{Array{Int64,2},1}:\n",
        " [1 2]\n",
-       " [2 3]"
+       " [1 4]\n",
+       " [2 3]\n",
+       " [3 4]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[[1 2], [2 3]]"
+    "append!([[1 2], [1 4]], [[2 3], [3 4]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "contemporary-retrieval",
+   "execution_count": 190,
+   "id": "soviet-johnston",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "$2$"
-      ],
       "text/plain": [
-       "2"
+       "1×3 Array{Int64,2}:\n",
+       " 1  2  3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rank(Array(tv.RAYS))"
+    "sort(hcat([1, 3]..., [2]...), dims=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "pretty-seeking",
+   "execution_count": 204,
+   "id": "individual-intro",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "[$2$]"
-      ],
       "text/plain": [
-       "1-element Array{Int64,1}:\n",
-       " 2"
+       "2×2 Array{Int64,2}:\n",
+       " 2  3\n",
+       " 3  4"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filter(t -> t ==2, range(1,stop=5))"
+    "convert(Array{Int64, 2}, [[2 3]; [3 4]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-density",
+   "id": "alleged-helen",
    "metadata": {},
    "outputs": [],
    "source": []
