--- a/makeSimplicialDraft.ipynb
+++ b/makeSimplicialDraft.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "reduced-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "handed-statement",
    "metadata": {
     "scrolled": true
    },
@@ -59,6 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "ahead-opposition",
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "seasonal-brazil",
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "smoking-accused",
    "metadata": {},
    "outputs": [
     {
@@ -147,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "pretty-bacon",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +177,10 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "id": "intensive-swimming",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -195,6 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "pressed-pocket",
    "metadata": {},
    "outputs": [
     {
@@ -217,6 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "studied-judges",
    "metadata": {},
    "outputs": [
     {
@@ -245,32 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "[$1$, $2$]"
-      ],
-      "text/plain": [
-       "2-element Array{Int64,1}:\n",
-       " 1\n",
-       " 2"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "findall(a -> a, tv.MAXIMAL_CONES[1,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
+   "id": "adverse-capture",
    "metadata": {},
    "outputs": [
     {
@@ -296,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "periodic-floor",
    "metadata": {},
    "outputs": [
     {
@@ -314,13 +302,13 @@
    ],
    "source": [
     "# Seems to require cast to generic matrix in order to calculate rank\n",
-    "rank(Matrix(tv.RAYS))\n",
-    "# findfirst"
+    "rank(Matrix(tv.RAYS))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "christian-prime",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +331,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
+   "id": "analyzed-appendix",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "getConeRays (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function getConeRays(coneRayIndices, rayMatrix)\n",
+    "    return tv.RAYS[findall(bool -> bool, coneRayIndices),:]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "healthy-california",
    "metadata": {},
    "outputs": [
     {
@@ -352,41 +364,22 @@
        "getConeRank (generic function with 1 method)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function getConeRank(coneRayIndices, rayMatrix)\n",
-    "    coneRays = tv.RAYS[findall(bool -> bool, coneRayIndices),:]\n",
+    "    coneRays = getConeRays(coneRayIndices, rayMatrix)\n",
     "    return rank(Matrix(coneRays))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Nothing"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "badCone = Nothing"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 80,
+   "id": "obvious-inventory",
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
+   "id": "imported-transportation",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +425,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "dirty-recycling",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4]\n",
+      "[1, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "println(deleteat!(a, 3))\n",
+    "println(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "reflected-holder",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "getConeFaces (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function getConeFaces(coneRayIndices, rayMatrix)\n",
+    "    outCones = []\n",
+    "    # We want to find cones with dimension 1 less than the original\n",
+    "    # Calculate dimension of cone - 1\n",
+    "    c = getConeRank(coneRayIndices, rayMatrix) - 1\n",
+    "    for i in 1:size(coneRayIndices)\n",
+    "        # Iterate through the cone rays in order to iterate through\n",
+    "        # all subcones that are missing one ray from the original\n",
+    "        subcone = deleteat!(copy(coneRayIndices), i)\n",
+    "        \n",
+    "        # Check that it has dimension 1 less than the original\n",
+    "        if (getConeRank(subcone, rayMatrix) == c)\n",
+    "            push!(outCones, subcone)\n",
+    "        end\n",
+    "    end\n",
+    "    return outCones\n",
+    "    # This code may be incorrect, since I am not sure whether we\n",
+    "    # need to consider subcones missing more than 1 ray\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
+   "id": "simplified-sharing",
    "metadata": {},
    "outputs": [
     {
@@ -464,26 +519,20 @@
     "            # All cones are linearly independent\n",
     "            break\n",
     "        else\n",
-    "            # Use some function to get dimension of the fan\n",
-    "            # Calculate codimension of cone\n",
-    "            c = 1 + getDimension(Y) - rank(Matrix(rayMatrix))\n",
     "            # Find the first ray that is contained in more than one orbit\n",
     "            # and subdivide at that ray, using toricBlowup\n",
     "            \n",
-    "            # Macaulay2 code\n",
-    "            #edges := select (orbits (Y,c), r -> all(r, j -> member (j,s)));\n",
-    "            #find the orbits of Y of dimension c that are contained in s\n",
-    "            #while #select (edges, r -> not member (s#i,r)) === 1 do i = i+1;\n",
+    "            # Get faces\n",
+    "            edges = getConeFaces(badCone, rayMatrix)\n",
+    "            # Find the first ray that is contained in more than one orbit\n",
     "            i = 1\n",
     "            while count(r->(badCone[i] in r), edges) == 1\n",
     "                i += 1\n",
     "            end\n",
-    "            \n",
-    "            Y = toricBlowup(badCone[i], Y)\n",
-    "            #find the first ray that is contained in more than one orbit\n",
-    "            #Y = toricBlowup({s#i},Y) )\n",
-    "            #subdivide at that ray\n",
+    "            # Subdivide at the cone containing just that ray\n",
+    "            Y = toricBlowup([badCone[i]], Y)\n",
     "        end\n",
+    "        # Repeat this process until there are no more bad cones\n",
     "    end\n",
     "    return Y\n",
     "end\n",
@@ -493,6 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "identified-guest",
    "metadata": {},
    "outputs": [],
    "source": []
